tests/baselines/reference/noImplicitAnyReferencingDeclaredInterface.errors.txt
tests/cases/compiler/noImplicitAnyReferencingDeclaredInterface.ts(3,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== tests/cases/compiler/noImplicitAnyReferencingDeclaredInterface.ts (1 errors) ====
    interface Entry {
        // Should return error for implicit any.
        new ();
        ~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    declare var x: Entry;